2020-10-21  Akira Kakuto  <kakuto@w32tex.org>

	Import freetype-2.10.4.
	* version.ac: Adjusted.

2020-10-11  Akira Kakuto  <kakuto@w32tex.org>

	Import freetype-2.10.3.
	* configure.ac, version.ac: Adjusted.

2020-05-10  Akira Kakuto  <kakuto@w32tex.org>

	Import freetype-2.10.2.
	* version.ac: Adjusted.

2019-07-02  Akira Kakuto  <kakuto@w32tex.org>

	Import freetype-2.10.1.
	* version.ac: Adjusted.

2019-05-03  Akira Kakuto  <kakuto@w32tex.org>

	Import freetype-2.10.0.
	* version.ac: Adjusted.

2018-12-22  Karl Berry  <karl@freefriends.org>

	* configure.ac: always pass --build arg if specified, not just if
	--host was also given. (The other ft configure arguments are
	hardwired in Makefile.am.) Original report from Nelson Beebe:
	https://tug.org/pipermail/tlbuild/2016q2/003548.html

2018-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.9.1.
	* version.ac: Adjusted.

2018-01-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.9.0.
	* version.ac: Adjusted.

2017-09-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.8.1.
	* version.ac: Adjusted.

2017-06-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.8.0.
	* version.ac: Adjusted.

2016-12-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.7.1.
	* version.ac: Adjusted.

2016-09-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.7.0.
	* version.ac: Adjusted.

2016-07-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.6.5.
	* version.ac: Adjusted.

2016-07-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.6.4.
	* version.ac: Adjusted.

2016-02-15  Karl Berry  <karl@tug.org>

	* freetype-PATCHES: rename from freetype-src-PATCHES.
	* Makefile.am (EXTRA_DIST): likewise.

2016-02-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.6.3.
	* version.ac: Adjusted.

2015-12-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import freetype-2.6.2.
	* version.ac: Adjusted.
